# tardigrade

./: .clippy.toml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: test-server.sh
crates/derive/: Cargo.toml  README.md
crates/derive/src/: init.rs  interface.rs  lib.rs  shared.rs  take_handle.rs  utils.rs  with_handle.rs  workflow_entry.rs
crates/grpc/: Cargo.toml  README.md  build.rs
crates/grpc/proto/tardigrade/: channels.proto  service.proto  test.proto  types.proto
crates/grpc/proto/tardigrade/v0/: channels.proto  runtime.proto  test.proto  types.proto  workers.proto
crates/grpc/src/: client.rs  lib.rs  mapping.rs  service.rs  tests.rs
crates/grpc/src/service/: mapping.rs  mod.rs  storage.rs  tests.rs
crates/lib/: Cargo.toml  README.md
crates/lib/src/: test.rs  time.rs  wasm_utils.rs
crates/lib/src/channel/: broadcast.rs  imp_mock.rs
crates/lib/src/spawn/: mod.rs
crates/lib/src/task/: imp_mock.rs  imp_wasm32.rs  mod.rs
crates/lib/src/workflow/: handle.rs  untyped.rs
crates/lib/tests/integration/: task.rs
crates/rt/: Cargo.toml  README.md
crates/rt/src/: abi.rs  backends.rs  driver.rs  handle.rs  lib.rs  mock_scheduler.rs  module.rs  receipt.rs  services.rs  storage.rs  test.rs  time.rs  utils.rs
crates/rt/src/data/: channel.rs  helpers.rs  mod.rs  persistence.rs  spawn.rs  task.rs  time.rs  traced.rs
crates/rt/src/data/tests/: mod.rs  spawn.rs
crates/rt/src/driver/: mod.rs  tests.rs
crates/rt/src/engine/: mock.rs  mod.rs
crates/rt/src/engine/wasmtime/: api.rs  functions.rs  instance.rs  mod.rs  module.rs
crates/rt/src/handle/: channel.rs  future.rs  mod.rs  workflow.rs
crates/rt/src/manager/: driver.rs  future.rs  handle.rs  mod.rs  new_workflows.rs  persistence.rs  services.rs  stubs.rs  tests.rs  tick.rs  traits.rs  transaction.rs
crates/rt/src/manager/tests/: driver.rs  mod.rs  spawn.rs
crates/rt/src/module/: exports.rs  imports.rs  mod.rs  services.rs  tests.rs
crates/rt/src/runtime/: driver.rs  mod.rs  services.rs  stubs.rs  tick.rs  traits.rs
crates/rt/src/runtime/tests/: driver.rs  mod.rs  spawn.rs  worker.rs
crates/rt/src/services/: manager.rs  mod.rs
crates/rt/src/services/manager/: tests.rs
crates/rt/src/state/: channel.rs  helpers.rs  mod.rs  persistence.rs  task.rs  time.rs  traced.rs
crates/rt/src/storage/: helper.rs  local.rs  macros.rs  mod.rs  records.rs  stream.rs  transaction.rs
crates/rt/src/test/: compiler.rs  engine.rs  mod.rs
crates/rt/src/workflow/: env.rs  mod.rs  persistence.rs  tests.rs
crates/rt/src/workflow/tests/: spawn.rs
crates/shared/: Cargo.toml  README.md
crates/shared/src/: abi.rs  codec.rs  error.rs  handle.rs  helpers.rs  interface.rs  lib.rs  path.rs  trace.rs  types.rs  workflow.rs
crates/shared/src/workflow/: handle.rs  mod.rs
crates/worker/: Cargo.toml  README.md
crates/worker/src/: connection.rs  lib.rs
e2e-tests/basic/: Cargo.toml  README.md
e2e-tests/basic/.cargo/: config.toml
e2e-tests/basic/src/: lib.rs  requests.rs  spawn.rs  tardigrade-baking.json  tardigrade-req.json  tardigrade-tasks.json  tardigrade.json  tasks.rs  tests.rs
e2e-tests/basic/tests/: integration.rs
e2e-tests/basic/tests/integration/: async_env.rs  driver.rs  main.rs  requests.rs  spawn.rs  sync_env.rs  tasks.rs
e2e-tests/pizza/: Cargo.toml  README.md
e2e-tests/pizza/src/: lib.rs  spawn.rs  tardigrade-req.json  tardigrade.json  tests.rs
e2e-tests/pizza/tests/: test-grpc.sh
e2e-tests/pizza/tests/integration/: driver.rs  main.rs  requests.rs  spawn.rs  sync_env.rs  tasks.rs
implementors/futures_sink/: trait.Sink.js
implementors/hashbrown/: trait.Equivalent.js
implementors/tardigrade_worker/: trait.HandleRequest.js
implementors/tower_service/: trait.Service.js
src/: abi.rs  codec.rs  context.rs  data.rs  error.rs  ext.rs  lib.rs  mock.rs  test.rs  time.rs  trace.rs  tracing.rs  types.rs  wasm_utils.rs
src/channel/: broadcast.rs  imp_mock.rs  imp_wasm32.rs  mod.rs  requests.rs
src/error/: mod.rs  tests.rs
src/ext/: mod.rs  trace.rs
src/spawn/: config.rs  imp_mock.rs  imp_wasm32.rs  mod.rs
src/tardigrade/: abi.rs.html  codec.rs.html  lib.rs.html  test.rs.html  time.rs.html  tracing.rs.html
src/tardigrade_grpc/: client.rs.html  lib.rs.html
tardigrade/: all.html  fn.now.html  fn.sleep.html  index.html  sidebar-items.js  struct.Json.html  struct.Raw.html  struct.Timer.html  struct.TimerDefinition.html  trait.Codec.html  type.ChannelId.html  type.FutureId.html  type.TaskId.html  type.TimerId.html  type.WakerId.html  type.WorkflowId.html
tardigrade_grpc/: all.html  constant.SERVICE_DESCRIPTOR.html  index.html  sidebar-items.js  struct.ChannelsServiceServer.html  struct.Client.html  struct.RuntimeServiceServer.html  struct.RuntimeWrapper.html  struct.StorageWrapper.html  struct.TestServiceServer.html  trait.WithClockType.html
tardigrade_rt/: all.html  index.html  sidebar-items.js  struct.AsyncIoScheduler.html  struct.Channels.html  struct.ChildWorkflow.html  struct.MockScheduler.html  struct.PersistedWorkflow.html  struct.ReceiverState.html  struct.SenderState.html  struct.TaskState.html  struct.TimerState.html  struct.TokioScheduler.html  trait.Clock.html  trait.Schedule.html  type.TimerFuture.html
tardigrade_shared/: all.html  enum.Request.html  index.html  sidebar-items.js  struct.Json.html  struct.Raw.html  struct.Response.html  trait.Codec.html  type.ChannelId.html  type.TaskId.html  type.TimerId.html  type.WakerId.html  type.WorkflowId.html
tardigrade_worker/: all.html  index.html  sidebar-items.js  struct.Cancellation.html  struct.FnHandler.html  struct.Request.html  struct.ResponseSender.html  struct.Worker.html  struct.WorkerRecord.html  trait.HandleRequest.html  trait.WorkerInterface.html  trait.WorkerStorageConnection.html  trait.WorkerStoragePool.html  type.MessageStream.html
(+513 files in other folders)
