[package]
name = "tardigrade"
version = "0.1.0"
edition = "2021"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["orchestration", "workflow", "business process"]
categories = ["asynchronous", "wasm"]
description = "Client bindings for Tardigrade workflows"
repository = "https://github.com/slowli/tardigrade"

[dependencies]
async-trait = "0.1.57"
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
futures = "0.3.21"
once_cell = "1.12.0"
pin-project-lite = "0.2.9"
serde = "1"
serde_json = { version = "1", optional = true }
slab = "0.4.6"
tracing = { version = "0.1.37", optional = true }
tracing-tunnel = { version = "0.1.0", optional = true, features = ["sender"] }

tardigrade-shared = { version = "0.1.0", path = "crates/shared" }
tardigrade-derive = { version = "0.1.0", path = "crates/derive" }

[dependencies.externref]
version = "0.1.0"
git = "https://github.com/slowli/externref.git"
rev = "2e7ce459f98d0493d7734fe20b1945e41838250e"

[dev-dependencies]
assert_matches = "1.5.0"
async-io = "1.7.0"
rand = "0.8.5"
version-sync = "0.9.4"

[features]
default = ["serde_json", "tracing"]
tracing = ["dep:tracing", "tracing-tunnel", "serde_json"]

[profile.wasm]
inherits = "release"
panic = "abort"
codegen-units = 1
opt-level = "z" # Optimize for size, rather than speed
lto = true

[workspace]
members = [
  ".",
  "crates/shared",
  "crates/derive",
  "crates/rt",
  "crates/grpc",
  "e2e-tests/pizza",
]
