[workspace]
members = [
  # Base libraries
  "crates/shared",
  "crates/derive",
  "crates/lib",
  # Runtime and runtime helpers
  "crates/rt",
  "crates/grpc",
  "crates/worker",
  "crates/cli",
  # E2E tests
  "e2e-tests/pizza",
]
resolver = "2"

[profile.wasm]
inherits = "release"
panic = "abort"
codegen-units = 1
opt-level = "z" # Optimize for size, rather than speed
lto = true
