[workspace]
members = [
  # Base libraries
  "crates/shared",
  "crates/derive",
  "crates/lib",
  # Runtime and runtime helpers
  "crates/rt",
  "crates/grpc",
  "crates/worker",
  "crates/cli",
  # E2E tests
  "e2e-tests/pizza",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["orchestration", "workflow", "business-process"]
categories = ["asynchronous", "wasm"]
repository = "https://github.com/slowli/tardigrade"

[workspace.dependencies]
anyhow = "1.0.79"
assert_matches = "1.5.0"
async-io = "2.2.2"
async-std = "1.12.0"
async-stream = "0.3.3"
async-trait = "0.1.77"
base64 = "0.21.5"
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
clap = "4.4.13"
darling = "0.20.3"
externref = "0.2.0"
flate2 = "1.0.24"
futures = "0.3.21"
hashbrown = "0.14.3"
http = { version = "0.2.9", default-features = false }
leb128 = "0.2.5"
lru = "0.12.1"
mimicry = { version = "0.1.0", git = "https://github.com/slowli/mimicry.git", rev = "87abe3031032d3465f2e0172c96b68cd16fcf9f9"}
once_cell = "1.19.0"
pin-project-lite = "0.2.9"
proc-macro2 = "1.0"
prost = "0.12.3"
prost-types = "0.12.3"
quote = "1.0"
rand = "0.8.5"
serde = "1"
serde_json = "1"
syn = "2"
slab = "0.4.6"
test-casing = "0.1.2"
tokio = "1.35.1"
tonic = { version = "0.10.2", default-features = false }
tonic-build = "0.10.2"
tonic-reflection = "0.10.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.18"
tracing-capture = "0.1.0"
tracing-tunnel = "0.1.0"
version-sync = "0.9.4"
wasmtime = "13.0.0"

[profile.wasm]
inherits = "release"
panic = "abort"
codegen-units = 1
opt-level = "z" # Optimize for size, rather than speed
lto = true
