[package]
name = "tardigrade-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
readme = "README.md"
description = "gRPC server encapsulating Tardigrade runtime"

[dependencies]
async-stream.workspace = true
clap = { workspace = true, features = ["derive", "wrap_help"] }
futures.workspace = true
http = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tonic.workspace = true
tonic-reflection.workspace = true
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

tardigrade-rt = { version = "0.1.0", path = "../rt" }
tardigrade-grpc = { version = "0.1.0", path = "../grpc", features = ["server"] }

[[bin]]
name = "tardigrade-grpc"
path = "src/main.rs"
