[package]
name = "tardigrade-derive"
version = "0.1.0"
edition = "2021"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["orchestration", "workflow", "business process"]
categories = ["asynchronous", "wasm"]
description = "Procedural macros for Tardigrade workflows"
repository = "https://github.com/slowli/tardigrade"

[lib]
proc-macro = true

[dependencies]
darling = "0.14.1"
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
syn = "1.0"

tardigrade-shared = { version = "0.1.0", path = "../shared" }

[dev-dependencies]
version-sync = "0.9.4"
