[package]
name = "tardigrade-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
readme = "README.md"
description = "Procedural macros for Tardigrade workflows"

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
syn.workspace = true

tardigrade-shared = { version = "0.1.0", path = "../shared" }

[dev-dependencies]
version-sync.workspace = true
