[package]
name = "tardigrade-grpc"
version = "0.1.0"
edition = "2021"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["orchestration", "workflow", "business process"]
categories = ["asynchronous", "wasm"]
description = "Server gRPC bindings for Tardigrade runtime"
repository = "https://github.com/slowli/tardigrade"

[dependencies]
async-stream = "0.3.3"
futures = "0.3.25"
prost = "0.11.5"
tokio = { version = "1.24.1", features = ["rt"] }
tonic = { version = "0.8.3", default-features = false, features = ["codegen", "prost"] }
tracing = { version = "0.1.37", features = ["attributes"] }

tardigrade = { version = "0.1.0", path = "../.." }
tardigrade-rt = { version = "0.1.0", path = "../rt", features = ["tokio"] }

[dev-dependencies]
anyhow = "1.0.68"
assert_matches = "1.5.0"
tokio = { version = "1.24.1", features = ["rt", "macros"] }

tardigrade-rt = { version = "0.1.0", path = "../rt", features = ["tokio", "test"] }

[build-dependencies]
tonic-build = "0.8.4"
