[package]
name = "tardigrade-rt"
version = "0.1.0"
edition = "2021"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["orchestration", "workflow", "business process"]
categories = ["asynchronous", "wasm"]
description = "Runtime for Tardigrade workflows"
repository = "https://github.com/slowli/tardigrade"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.57"
base64 = "0.13.0"
chrono = { version = "0.4.22", features = ["serde"] }
flate2 = "1.0.24" # TODO: make optional? (+ expose workflow memory)
futures = "0.3.21"
leb128 = "0.2.5"
once_cell = "1.13.0"
pin-project-lite = "0.2.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
wasmtime = "3.0.0"

## Standalone optional dependencies
# Implements the scheduler trait based on `async-io` / `async-std` runtime.
async-io = { version = "1.7.0", optional = true }

tardigrade = { version = "0.1.0", path = "../.." }

# TODO: make optional together with the `test` module?
[dependencies.externref]
version = "0.1.0"
git = "https://github.com/slowli/externref.git"
rev = "36f978748b27d1621e6a565317859b00f99f5e8a"
features = ["processor"]

[dependencies.tracing-tunnel]
version = "0.1.0"
git = "https://github.com/slowli/tracing-toolbox.git"
rev = "8ee374e08cb702df70d27c9eb7e36f87ff72da6f"
features = ["receiver"]

[dev-dependencies]
assert_matches = "1.5.0"
async-std = { version = "1.12.0", features = ["attributes"] }
version-sync = "0.9.4"

[dev-dependencies.mimicry]
version = "0.1.0"
git = "https://github.com/slowli/mimicry.git"
rev = "87abe3031032d3465f2e0172c96b68cd16fcf9f9"
