[package]
name = "tardigrade-rt"
version = "0.1.0"
edition = "2021"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["orchestration", "workflow", "business process"]
categories = ["asynchronous", "wasm"]
description = "Runtime for Tardigrade workflows"
repository = "https://github.com/slowli/tardigrade"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.57"
base64 = "0.21.0"
chrono = { version = "0.4.23", features = ["serde"] }
flate2 = "1.0.24"
futures = "0.3.21"
leb128 = "0.2.5"
lru = "0.9.0"
once_cell = "1.13.0"
ouroboros = "0.15.5"
pin-project-lite = "0.2.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-tunnel = { version = "0.1.0", features = ["receiver"] }
wasmtime = "4.0.0"

## Standalone optional dependencies
# Implements the scheduler trait based on `async-io` / `async-std` runtime.
async-io = { version = "1.7.0", optional = true }
# Implements the scheduler trait based on `tokio` runtime.
tokio = { version = "1.23.0", features = ["time"], optional = true }

tardigrade = { version = "0.1.0", path = "../.." }
tardigrade-worker = { version = "0.1.0", path = "../worker" }

[dependencies.externref]
version = "0.1.0"
optional = true
git = "https://github.com/slowli/externref.git"
rev = "2e7ce459f98d0493d7734fe20b1945e41838250e"
features = ["processor"]

[dependencies.mimicry]
version = "0.1.0"
git = "https://github.com/slowli/mimicry.git"
rev = "87abe3031032d3465f2e0172c96b68cd16fcf9f9"
optional = true

[dev-dependencies]
assert_matches = "1.5.0"
async-std = { version = "1.12.0", features = ["attributes"] }
version-sync = "0.9.4"

[dev-dependencies.mimicry]
version = "0.1.0"
git = "https://github.com/slowli/mimicry.git"
rev = "87abe3031032d3465f2e0172c96b68cd16fcf9f9"

[features]
default = []
# Enables the `test` module with test-related helpers.
test = ["externref", "mimicry"]
