[package]
name = "tardigrade-rt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
readme = "README.md"
description = "Runtime for Tardigrade workflows"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["clock", "serde"] }
flate2.workspace = true
futures.workspace = true
leb128.workspace = true
lru.workspace = true
once_cell.workspace = true
pin-project-lite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-tunnel = { workspace = true, features = ["receiver"] }
wasmtime.workspace = true

## Standalone optional dependencies
# Implements the scheduler trait based on `async-io` / `async-std` runtime.
async-io = { workspace = true, optional = true }
# Implements the scheduler trait based on `tokio` runtime.
tokio = { workspace = true, features = ["time"], optional = true }

externref = { workspace = true, optional = true, features = ["processor"] }
mimicry = { workspace = true, optional = true }

tardigrade = { version = "0.1.0", path = "../lib" }
tardigrade-worker = { version = "0.1.0", path = "../worker" }

[dev-dependencies]
assert_matches.workspace = true
async-std = { workspace = true, features = ["attributes"] }
version-sync.workspace = true
mimicry.workspace = true

[features]
default = []
# Enables the `test` module with test-related helpers.
test = ["externref", "mimicry"]
