[package]
name = "tardigrade-shared"
version = "0.1.0"
edition = "2021"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["orchestration", "workflow", "business process"]
categories = ["asynchronous", "wasm"]
description = "Shared data types for Tardigrade workflows"
repository = "https://github.com/slowli/tardigrade"

[dependencies]
hashbrown = { version = "0.13.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
version-sync = "0.9.4"
