[package]
name = "tardigrade-worker"
version = "0.1.0"
edition = "2021"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["orchestration", "workflow", "business process"]
categories = ["asynchronous", "wasm"]
description = "Workers for Tardigrade runtime"
repository = "https://github.com/slowli/tardigrade"

[dependencies]
async-trait = "0.1.61"
futures = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1.37", features = ["attributes"] }

tardigrade-shared = { version = "0.1.0", path = "../shared" }

[dev-dependencies]
tokio = { version = "1.24.2", features = ["rt"] }
