[package]
name = "tardigrade-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
readme = "README.md"
description = "Workers for Tardigrade runtime"

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true, features = ["attributes"] }

tardigrade-shared = { version = "0.1.0", path = "../shared" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }
