[package]
name = "tardigrade-test-basic"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["orchestration", "workflow", "business process"]
categories = ["asynchronous", "wasm"]
description = "Example of a Tardigrade workflow"
repository = "https://github.com/slowli/tardigrade"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.37"

tardigrade = { version = "0.1.0", path = "../..", features = ["derive"] }

[dev-dependencies]
assert_matches = "1.5.0"
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.22"
once_cell = "1.12.0"
serde_json = "1.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies.tracing-capture]
version = "0.1.0"
git = "https://github.com/slowli/tracing-toolbox.git"
rev = "5b918df7adea79a3b2cc8d14decbb493c360467f"

[dev-dependencies.externref]
version = "0.1.0"
git = "https://github.com/slowli/externref.git"
rev = "1320af1df269cb3df4710da1b3e4e9efb9b43ed3"
features = ["processor-log"]

[dev-dependencies.tardigrade-rt]
version = "0.1.0"
path = "../../crates/rt"
features = ["async", "async-io"]
