[package]
name = "tardigrade-test-basic"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["orchestration", "workflow", "business process"]
categories = ["asynchronous", "wasm"]
description = "Example of a Tardigrade workflow"
repository = "https://github.com/slowli/tardigrade"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.37"

tardigrade = { version = "0.1.0", path = "../.." }

[dev-dependencies]
anyhow = "1.0.66"
assert_matches = "1.5.0"
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.22"
once_cell = "1.12.0"
serde_json = "1.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies.externref]
version = "0.1.0"
git = "https://github.com/slowli/externref.git"
rev = "36f978748b27d1621e6a565317859b00f99f5e8a"

[dev-dependencies.tracing-capture]
version = "0.1.0"
git = "https://github.com/slowli/tracing-toolbox.git"
rev = "8ee374e08cb702df70d27c9eb7e36f87ff72da6f"

[dev-dependencies.tardigrade-rt]
version = "0.1.0"
path = "../../crates/rt"
features = ["async-io"]
