[package]
name = "tardigrade-pizza"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
publish = false
readme = "README.md"
description = "Example of a Tardigrade workflow that emulates pizza baking and delivery"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true

tardigrade = { version = "0.1.0", path = "../../crates/lib" }

[dev-dependencies]
anyhow.workspace = true
assert_matches.workspace = true
async-std = { workspace = true, features = ["attributes"] }
chrono.workspace = true
once_cell.workspace = true
serde_json.workspace = true
test-casing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-capture.workspace = true

[dev-dependencies.tardigrade-worker]
version = "0.1.0"
path = "../../crates/worker"

[dev-dependencies.tardigrade-rt]
version = "0.1.0"
path = "../../crates/rt"
features = ["async-io", "test"]
